# AdminLTE

./: db.sqlite3  manage.py  pyproject.toml
account/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
account/__pycache__/: forms.cpython-39.pyc.1752164607024  urls.cpython-39.pyc.2409196227888  views.cpython-39.pyc.2903974183600
account/migrations/: 0001_initial.py  0002_auto_20210629_1453.py  0002_remove_user_image.py  0003_remove_user_full_name.py  0004_auto_20210630_1227.py  0005_auto_20210630_1259.py  0006_auto_20210701_1337.py  0007_user_is_email_verified.py  0008_auto_20210709_1218.py  0009_auto_20210709_1358.py
adminevolution/: asgi.py  settings.py  urls.py  wsgi.py
category/: forms.py  models.py  urls.py  views.py
category/migrations/: 0001_initial.py
env/Scripts/: activate  activate.bat
product/: forms.py  models.py  urls.py  views.py
product/migrations/: 0001_initial.py  0002_alter_product_productstock.py  0003_remove_product_productimage.py  0004_auto_20210624_0849.py  0005_alter_product_productquantity.py
templates/: activate.html  base.html  categoryadd.html  categoryread.html  categoryupdate.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  productadd.html  productread.html  productupdate.html  signup.html  useradd.html  userlogin.html  userread.html  userupdate.html
templates/account/: changepass.html  profile.html  useradd.html  userread.html  userupdate.html
user/: forms.py  models.py  urls.py  views.py
(+4 files in other folders)
